tests/ui/traits/issue-105231.stderr
error[E0072]: recursive types `A` and `B` have infinite size
  --> $DIR/issue-105231.rs:1:1
   |
LL | struct A<T>(B<T>);
   | ^^^^^^^^^^^ ---- recursive without indirection
...
LL | struct B<T>(A<A<T>>);
   | ^^^^^^^^^^^ ------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL ~ struct A<T>(Box<B<T>>);
LL |
LL |
LL ~ struct B<T>(Box<A<A<T>>>);
   |

error[E0392]: type parameter `T` is never used
  --> $DIR/issue-105231.rs:1:10
   |
LL | struct A<T>(B<T>);
   |          ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error[E0392]: type parameter `T` is never used
  --> $DIR/issue-105231.rs:4:10
   |
LL | struct B<T>(A<A<T>>);
   |          ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error[E0119]: conflicting implementations of trait `Foo` for type `B<u8>`
  --> $DIR/issue-105231.rs:8:1
   |
LL | impl<T> Foo for T where T: Send {}
   | ------------------------------- first implementation here
LL | impl Foo for B<u8> {}
   | ^^^^^^^^^^^^^^^^^^ conflicting implementation for `B<u8>`
   |
   = note: overflow evaluating the requirement `B<u8>: Send`
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_105231`)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0072, E0119, E0392.
For more information about an error, try `rustc --explain E0072`.
